php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #64713 Compilation warnings in fileinfo
Submitted: 2013-04-25 18:30 UTC Modified: 2013-04-27 12:11 UTC
From: sixd@php.net Assigned: ab (profile)
Status: Closed Package: Filesystem function related
PHP Version: 5.5.0beta4 OS:
Private report: No CVE-ID: None
 [2013-04-25 18:30 UTC] sixd@php.net
Description:
------------
The libmagic patch could be tidied up to remove these warnings:

/home/cjones/Desktop/php-5.5.0beta4/ext/fileinfo/libmagic/magic.c:83:14: warning: 
‘free_mlist’ declared ‘static’ but never defined [-Wunused-function]
/home/cjones/Desktop/php-5.5.0beta4/ext/fileinfo/libmagic/magic.c:87:21: warning: 
‘get_default_magic’ declared ‘static’ but never defined [-Wunused-function]

and

/home/cjones/Desktop/php-5.5.0beta4/ext/fileinfo/libmagic/print.c: In function 
‘file_fmttime’:
/home/cjones/Desktop/php-5.5.0beta4/ext/fileinfo/libmagic/print.c:82:3: warning: 
implicit declaration of function ‘cdf_timestamp_to_timespec’ [-Wimplicit-
function-declaration]


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-04-26 17:09 UTC] sixd@php.net
And with a git build, this warning occurs:

/home/cjones/php-5.5/ext/fileinfo/libmagic/apprentice.c: In function ‘apprentice_load’:
/home/cjones/php-5.5/ext/fileinfo/libmagic/apprentice.c:1172: warning: passing argument 1 of ‘_php_stream_opendir’ discards qualifiers from pointer target type
/home/cjones/php-5.5/ext/fileinfo/libmagic/apprentice.c:1136: warning: unused variable ‘mfn’
 [2013-04-26 17:13 UTC] ab@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: ab
 [2013-04-27 12:11 UTC] ab@php.net
-Status: Assigned +Status: Closed
 [2013-04-27 12:11 UTC] ab@php.net
The fix for this bug has been committed.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.

Fixed in cdc1a63790dc0d91189f93489d6f3d68a57acd9c
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 10:00:01 2026 UTC