Fixed bug bug #64713 Compilation warnings in finfo