ext/fileinfo/libmagic/print.c
@@ -33,6 +33,7 @@
 #include "php.h"
 
 #include "file.h"
+#include "cdf.h"
 
 #ifndef lint
 FILE_RCSID("@(#)$File: print.c,v 1.76 2013/02/26 18:25:00 christos Exp $")
@@ -63,7 +64,7 @@ file_magwarn(struct magic_set *ms, const char *f, ...)
 	TSRMLS_FETCH();
 
 	va_start(va, f);
-	vasprintf(&expanded_format, f, va);
+	if (vasprintf(&expanded_format, f, va)); /* silence */
 	va_end(va);
 	
 	php_error_docref(NULL TSRMLS_CC, E_NOTICE, "Warning: %s", expanded_format);
